Checking in draft changes

--- a/ship-it/src/styles.scss
+++ b/ship-it/src/styles.scss
@@ -147,3 +147,6 @@ hr.sidebarDivider {
 .headingText {
   @extend .font-weight-bold;
 }  
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
