--- a/ship-it/src/app/page-one/page-one.component.html
+++ b/ship-it/src/app/page-one/page-one.component.html
@@ -5,6 +5,9 @@
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
     <p class="card-text">Page 2....</p>
+    <div *ngFor="let student of students | async">
+      Student Name : {{student.student_name}}
+    </div>
   </div>
   <div class="card-footer text-muted">
     2 days ago
