--- a/ship-it/src/app/welcome-page/welcome-page.component.html
+++ b/ship-it/src/app/welcome-page/welcome-page.component.html
@@ -5,7 +5,7 @@
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <button (click)="goToNextPage()" class="btn btn-primary">Get Quotes</button>
+    <button mat-button (click)="goToNextPage()" class="btn btn-primary">Get Quotes</button>
   </div>
   <div class="card-footer text-muted">
     2 days ago
