--- a/ship-it/src/app/welcome-page/welcome-page.component.html
+++ b/ship-it/src/app/welcome-page/welcome-page.component.html
@@ -3,11 +3,12 @@
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <button mat-button (click)="goToNextPage()" class="btn btn-primary">Get Quotes</button>
+    <h5 class="card-title">Look to the Future With Confidence</h5>
+    <p class="card-text">Answer a few simple questions, View the best coverages available, Get Insurance
+      at the click of a button</p>
+    <button mat-button (click)="goToNextPage()" class="btn btn-primary">Find the Right Coverage</button>
   </div>
   <div class="card-footer text-muted">
-    2 days ago
-  </div>
+    © Physicians Mutual®, 2002-2020. All Rights Reserved. Physicians Mutual Insurance Company • Physicians Life Insurance Company
+    2600 Dodge Street, Omaha, Nebraska 68131 </div>
 </div>
