--- a/ship-it/src/styles.scss
+++ b/ship-it/src/styles.scss
@@ -169,5 +169,9 @@ hr.sidebarDivider {
   font-weight: normal;
 }
 
+.mat-checkbox-layout {
+  white-space: normal !important;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
