--- a/ship-it/src/app/page-three/page-three.component.html
+++ b/ship-it/src/app/page-three/page-three.component.html
@@ -1,6 +1,6 @@
 <div class="card text-center">
   <div class="card-header">
-    <b>Financial Info</b>
+    <b>Financial Information</b>
   </div>
   <div class="card-body">
     <h5 class="card-title"></h5>
@@ -9,7 +9,7 @@
         <form class="" [formGroup]="formGroup">
           <div class="row col-12 justify-content-start">
             <div>
-              <mat-label class="mr-3"><b>Annual Income</b></mat-label>
+              <mat-label class="mr-3"><b>Annual Income:</b></mat-label>
               <mat-form-field class="example-full-width">
                 <mat-label>Amount</mat-label>
                 <input matInput formControlName="annualIncome">
@@ -18,7 +18,7 @@
           </div>
           <div class="row col-12 justify-content-start">
             <div>
-              <mat-label class="mr-3"><b>Do you have existing loans or debts (excluding mortgages)?</b></mat-label>
+              <mat-label class="mr-3"><b>Do you have any existing loans or debts (excluding mortgages)?</b></mat-label>
               <mat-form-field class="example-full-width">
                 <mat-label>Amount</mat-label>
                 <input matInput>
@@ -39,10 +39,11 @@
       <div class="col-4 justify-content-center">
         <div class="card text-center">
           <div class="card-header">
-            Featured
+            Tell us about Yourself
           </div>
           <div class="card-body">
-            <p class="card-text">Side Content....</p>
+            <p class="card-text">Applicant's Financial information is used
+              solely for the purpose of evaluating an application. We do not share information with third parties.</p>
           </div>
         </div>
       </div>
