--- a/ship-it/src/app/welcome-page/welcome-page.component.html
+++ b/ship-it/src/app/welcome-page/welcome-page.component.html
@@ -1,6 +1,6 @@
 <div class="card text-center">
   <div class="card-header">
-    <h2>Look to the Future With Confidence</h2>
+    <h2><b>Look to the Future With Confidence</b></h2>
   </div>
   <div class="card-body">
     <form [formGroup]="formGroup">
